--- a/drupal/web/themes/custom/bearcom/css/base/_variables.css
+++ b/drupal/web/themes/custom/bearcom/css/base/_variables.css
@@ -51,6 +51,8 @@
   /* Layout */
   --container-max-width: 1360px;
   --container-padding: 20px;
+  --header-height: 100px;
+  --top-bar-height: var(--spacing-xl);
 
   /* Footer */
   --color-footer-wave: #555D64;
